--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -85,7 +85,7 @@
               <div><label for="last_name">Nachname *</label><input id="last_name" name="last_name" required></div>
             </div>
             <label for="email">E-Mail *</label><input id="email" name="email" type="email" required>
-            <label for="street">Straße &amp; Nr. *</label><input id="street" name="street" required>
+            <label for="street">Straße &amp; Nr. *</label><input id="street" name="street" required></div>
             <div class="grid">
               <div><label for="sender_zip">PLZ *</label><input id="sender_zip" name="sender_zip" required></div>
               <div><label for="sender_city">Ort *</label><input id="sender_city" name="sender_city" required></div>
@@ -170,7 +170,7 @@ Mit freundlichen Grüßen
     </footer>
   </div>
 
-  <!-- MdB Lookup – NUR aus Lookup/Dropdown übernehmen (nie aus Freitext) -->
+  <!-- MdB Lookup – nur aus Dropdown übernehmen; Blur prüft nur, wenn Dropdown sichtbar -->
   <script>
   (function(){
     const $ = (s)=>document.querySelector(s);
@@ -193,7 +193,6 @@ Mit freundlichen Grüßen
       return addComma(fallback||'Sehr geehrte Damen und Herren');
     }
 
-    // JSON mit Pfad-Fallbacks
     async function loadTry(urls){ let err; for(const u of urls){ try{ const r=await fetch(u,{cache:'no-store'}); if(r.ok) return r.json(); err=new Error('HTTP '+r.status+' '+u);}catch(e){err=e;} } throw err; }
     const loadPLZ2WK=()=>loadTry(['assets/data/plz_to_wk.json','plz_to_wk.json']);
     const loadWK2MDB=()=>loadTry(['assets/data/wk_to_mdb.json','wk_to_mdb.json']);
@@ -223,7 +222,7 @@ Mit freundlichen Grüßen
 
     function setIntro(anrede,addr,name){
       const addrBlock=(name?name+'\n':'') + String(addr||'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
-      const finalSal=/,\s*$/.test(anrede||'')?anrede:( (anrede||'Sehr geehrte Damen und Herren')+',' );
+      const finalSal=/,\s*$/.test(anrede||'')?anrede:( (anrede||'Sehr geehrte Damen und Herren')+',');
       elMSG.dataset.recipientAddr=addrBlock;
       elMSG.dataset.salutation=finalSal;
       elMSG.value=(elMSG.value||'')
@@ -248,28 +247,30 @@ Mit freundlichen Grüßen
       elMP.value=name;
     }
 
-    // WICHTIG: Freitext im Abgeordnetenfeld wird nie übernommen
+    // WICHTIG: Blur prüft nur, wenn Dropdown sichtbar ist (sonst würde bei Einzeltreffer fälschlich zurückgesetzt)
     elSel.addEventListener('change',()=>{ if(elSel.value) chooseByName(elSel.value); });
     elMP .addEventListener('blur', ()=>{
+      const dropdownVisible = selWrap && selWrap.style.display !== 'none' && elSel.options.length > 0;
+      if(!dropdownVisible) return; // nichts tun, wenn kein Auswahl-Dropdown sichtbar ist
       const n=(elMP.value||'').trim();
       const isValid=[...elSel.options].some(o=>o.value===n);
-      if(!isValid){ // zurücksetzen auf generisch
+      if(isValid){ chooseByName(n); }
+      else{
         elMP.value='';
         setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
-      }else{
-        chooseByName(n);
       }
     });
 
-    // falls Browser bereits beim Laden autofillt -> leeren
     document.addEventListener('DOMContentLoaded', ()=>{ elMP.value=''; });
 
     let t=null; const debounce=(fn,ms)=>{ clearTimeout(t); t=setTimeout(fn,ms); };
     async function runLookup(){
       hideSelect();
       const plz=(elPLZ.value||'').trim(); const city=(elCity.value||'').trim();
-      if(!/^\d{5}$/.test(plz) && city.length<2){ setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); return; }
-
+      if(!/^\d{5}$/.test(plz) && city.length<2){
+        setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); 
+        return; 
+      }
       try{
         const {candidates,wks}=await findCandidates(plz,city);
         if(candidates.length>1){ setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); showSelect(candidates,wks); }
@@ -317,7 +318,7 @@ Mit freundlichen Grüßen
       return out.replace(/\n{3,}/g,'\n\n').trimEnd();
     }
 
-    // Live-Vorschau NUR für Absenderblock
+    // Live-Vorschau nur für Absenderblock
     const TOKENS=['{Vorname}','{Nachname}','{Straße}','{PLZ}','{Ort}'];
     function renderSenderPreview(){
       if(!msg) return;
@@ -378,6 +379,8 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
+
 
 
 
